# intel_repack-feedstock

./: README.md  abs.yaml
recipe/: deuniversalize.py  dll2lib.bat  install-devel.bat  install-devel.sh  meta.yaml  mkl_repack_and_patchelf.sh  repack.bat  repack.sh
recipe/patches/: 0001-MKLConfig-windows.patch
recipe/tests/mkl-devel/: CMakeLists.txt  app.c
